# xyz2wsg84

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindGeographicLib.cmake
src/: degdms.c  libgpsC.h  linfit.h  olt.h  plh2xyz.c  sidata.h  xyz2llh.c  xyz2plh.c  xyz2wsg.cxx
zip/: README.txt  readme2.txt
